# Wiki-Cyberpank2077

./: README.md
backend/: README.md  manage.py  pyproject.toml
backend/src/: __init__.py  main.py
backend/src/api/: __init__.py  router.py  schemas.py
backend/src/api/v1/: __init__.py
backend/src/api/v1/wiki/: __init__.py  router.py
backend/src/app/: __init__.py
backend/src/app/redis/: __init__.py  redis_cache.py
backend/src/app/scraper/: __init__.py  wiki_scraper.py
backend/src/app/search/: search_engine.py
backend/src/core/: config.py
