[project]
name = "cyberpunk2077"
version = "0.1.0"
description = ""
authors = [
    {name = "Amtilan",email = "149930972+Amtilan@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "fandom-py (>=0.2.1,<0.3.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "aioredis (>=2.0.1,<3.0.0)",
    "redis (>=5.2.1,<6.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
